log
Wed Oct 14 19:12:30 UTC 2020: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:56:9: error: variable ‘num’ set but not used [-Werror=unused-but-set-variable]
     int num;
         ^~~
cc1: all warnings being treated as errors
Compilation failed
Wed Oct 14 19:12:48 UTC 2020: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  0|0
0cf920f
Wed Oct 14 19:14:00 UTC 2020: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
7660f54
Wed Oct 14 19:15:15 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
14dd121
Wed Oct 14 19:39:42 UTC 2020: 
 sudoku.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
01e055c
Wed Oct 14 19:39:55 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
01c7148
Wed Oct 14 19:40:18 UTC 2020: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ae5aa18
Wed Oct 14 19:54:46 UTC 2020: 
 sudoku.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 0/70
1c2397e
Wed Oct 14 20:02:23 UTC 2020: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|4
total_score: 15/70
962b153
Thu Oct 15 00:24:39 UTC 2020: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|5
total_score: 0/70
c141fbf
Thu Oct 15 00:44:23 UTC 2020: 
 sudoku.c | 38 ++++++++++++++++++++++++++------------
 1 file changed, 26 insertions(+), 12 deletions(-)
 tests:  0|5
total_score: 0/70
f043034
Thu Oct 15 00:44:38 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
734c32e
Thu Oct 15 00:45:33 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
1b4ad23
Thu Oct 15 00:45:48 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
ce1c6be
Thu Oct 15 00:48:31 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
9b05efc
Thu Oct 15 00:53:11 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
504db23
Thu Oct 15 00:53:34 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
248c67b
Thu Oct 15 00:54:46 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
b261317
Thu Oct 15 00:55:25 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
c83e817
Thu Oct 15 00:55:37 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
64ed80e
Thu Oct 15 00:57:28 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
febf73a
Thu Oct 15 01:00:16 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
fe10b71
Thu Oct 15 01:01:02 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
468d8c5
Thu Oct 15 01:01:24 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
63f6633
